--- a/mylabfs/index.html
+++ b/mylabfs/index.html
@@ -25,7 +25,7 @@ img {
 <!-- <img src="images/smm_b_01.jpg" alt="Self Made Man Gold" width="100" height="100"> -->
 
 <h3>Good At</h3>
-<p>Linux / Ansible / Kubernetes / Docker / AWS </p>
+<p>Linux / Ansible / Kubernetes / Docker / AWS / Terraform</p>
 
 </div>
 
